// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar 快照测试 cursor={chapter:0, step:0} 快照应匹配 1`] = `
<div>
  <div
    class="pb-hover"
    data-no-advance="true"
  >
    <div
      class="pb"
    >
      <button
        class="pb-chapter pb-active"
      >
        <span
          class="pb-num"
        >
          01
        </span>
        <span
          class="pb-title"
        >
          Introduction
        </span>
        <div
          class="pb-pips"
        >
          <span
            class="pb-pip pb-pip-on"
          />
          <span
            class="pb-pip "
          />
          <span
            class="pb-pip "
          />
        </div>
      </button>
      <button
        class="pb-chapter "
      >
        <span
          class="pb-num"
        >
          02
        </span>
        <span
          class="pb-title"
        >
          Deep Dive
        </span>
      </button>
      <button
        class="pb-chapter "
      >
        <span
          class="pb-num"
        >
          03
        </span>
        <span
          class="pb-title"
        >
          Conclusion
        </span>
      </button>
    </div>
    <a
      aria-label="View source on GitHub"
      class="pb-github"
      href="https://github.com/ConardLi/garden-skills"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
      >
        <path
          d="M12 .5C5.65.5.5 5.65.5 12.02c0 5.08 3.29 9.39 7.86 10.91.58.11.79-.25.79-.56 0-.27-.01-1-.02-1.96-3.2.7-3.87-1.54-3.87-1.54-.52-1.33-1.28-1.69-1.28-1.69-1.04-.71.08-.7.08-.7 1.16.08 1.77 1.19 1.77 1.19 1.03 1.76 2.7 1.25 3.36.96.1-.75.4-1.25.73-1.54-2.55-.29-5.24-1.28-5.24-5.69 0-1.26.45-2.29 1.18-3.1-.12-.29-.51-1.46.11-3.04 0 0 .97-.31 3.18 1.18a11 11 0 0 1 5.79 0c2.2-1.49 3.17-1.18 3.17-1.18.63 1.58.23 2.75.12 3.04.74.81 1.18 1.84 1.18 3.1 0 4.42-2.69 5.39-5.25 5.68.41.36.78 1.06.78 2.13 0 1.54-.01 2.78-.01 3.16 0 .31.21.68.8.56 4.56-1.52 7.85-5.83 7.85-10.91C23.5 5.65 18.35.5 12 .5Z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`ProgressBar 快照测试 cursor={chapter:1, step:2} 快照应匹配 1`] = `
<div>
  <div
    class="pb-hover"
    data-no-advance="true"
  >
    <div
      class="pb"
    >
      <button
        class="pb-chapter "
      >
        <span
          class="pb-num"
        >
          01
        </span>
        <span
          class="pb-title"
        >
          Introduction
        </span>
      </button>
      <button
        class="pb-chapter pb-active"
      >
        <span
          class="pb-num"
        >
          02
        </span>
        <span
          class="pb-title"
        >
          Deep Dive
        </span>
        <div
          class="pb-pips"
        >
          <span
            class="pb-pip pb-pip-on"
          />
          <span
            class="pb-pip pb-pip-on"
          />
          <span
            class="pb-pip pb-pip-on"
          />
          <span
            class="pb-pip "
          />
          <span
            class="pb-pip "
          />
        </div>
      </button>
      <button
        class="pb-chapter "
      >
        <span
          class="pb-num"
        >
          03
        </span>
        <span
          class="pb-title"
        >
          Conclusion
        </span>
      </button>
    </div>
    <a
      aria-label="View source on GitHub"
      class="pb-github"
      href="https://github.com/ConardLi/garden-skills"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
      >
        <path
          d="M12 .5C5.65.5.5 5.65.5 12.02c0 5.08 3.29 9.39 7.86 10.91.58.11.79-.25.79-.56 0-.27-.01-1-.02-1.96-3.2.7-3.87-1.54-3.87-1.54-.52-1.33-1.28-1.69-1.28-1.69-1.04-.71.08-.7.08-.7 1.16.08 1.77 1.19 1.77 1.19 1.03 1.76 2.7 1.25 3.36.96.1-.75.4-1.25.73-1.54-2.55-.29-5.24-1.28-5.24-5.69 0-1.26.45-2.29 1.18-3.1-.12-.29-.51-1.46.11-3.04 0 0 .97-.31 3.18 1.18a11 11 0 0 1 5.79 0c2.2-1.49 3.17-1.18 3.17-1.18.63 1.58.23 2.75.12 3.04.74.81 1.18 1.84 1.18 3.1 0 4.42-2.69 5.39-5.25 5.68.41.36.78 1.06.78 2.13 0 1.54-.01 2.78-.01 3.16 0 .31.21.68.8.56 4.56-1.52 7.85-5.83 7.85-10.91C23.5 5.65 18.35.5 12 .5Z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`ProgressBar 快照测试 cursor={chapter:2, step:1} 快照应匹配 1`] = `
<div>
  <div
    class="pb-hover"
    data-no-advance="true"
  >
    <div
      class="pb"
    >
      <button
        class="pb-chapter "
      >
        <span
          class="pb-num"
        >
          01
        </span>
        <span
          class="pb-title"
        >
          Introduction
        </span>
      </button>
      <button
        class="pb-chapter "
      >
        <span
          class="pb-num"
        >
          02
        </span>
        <span
          class="pb-title"
        >
          Deep Dive
        </span>
      </button>
      <button
        class="pb-chapter pb-active"
      >
        <span
          class="pb-num"
        >
          03
        </span>
        <span
          class="pb-title"
        >
          Conclusion
        </span>
        <div
          class="pb-pips"
        >
          <span
            class="pb-pip pb-pip-on"
          />
          <span
            class="pb-pip pb-pip-on"
          />
        </div>
      </button>
    </div>
    <a
      aria-label="View source on GitHub"
      class="pb-github"
      href="https://github.com/ConardLi/garden-skills"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        height="20"
        viewBox="0 0 24 24"
        width="20"
      >
        <path
          d="M12 .5C5.65.5.5 5.65.5 12.02c0 5.08 3.29 9.39 7.86 10.91.58.11.79-.25.79-.56 0-.27-.01-1-.02-1.96-3.2.7-3.87-1.54-3.87-1.54-.52-1.33-1.28-1.69-1.28-1.69-1.04-.71.08-.7.08-.7 1.16.08 1.77 1.19 1.77 1.19 1.03 1.76 2.7 1.25 3.36.96.1-.75.4-1.25.73-1.54-2.55-.29-5.24-1.28-5.24-5.69 0-1.26.45-2.29 1.18-3.1-.12-.29-.51-1.46.11-3.04 0 0 .97-.31 3.18 1.18a11 11 0 0 1 5.79 0c2.2-1.49 3.17-1.18 3.17-1.18.63 1.58.23 2.75.12 3.04.74.81 1.18 1.84 1.18 3.1 0 4.42-2.69 5.39-5.25 5.68.41.36.78 1.06.78 2.13 0 1.54-.01 2.78-.01 3.16 0 .31.21.68.8.56 4.56-1.52 7.85-5.83 7.85-10.91C23.5 5.65 18.35.5 12 .5Z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`ProgressBar 快照测试 githubUrl=null 快照应匹配（无链接） 1`] = `
<div>
  <div
    class="pb-hover"
    data-no-advance="true"
  >
    <div
      class="pb"
    >
      <button
        class="pb-chapter pb-active"
      >
        <span
          class="pb-num"
        >
          01
        </span>
        <span
          class="pb-title"
        >
          Introduction
        </span>
        <div
          class="pb-pips"
        >
          <span
            class="pb-pip pb-pip-on"
          />
          <span
            class="pb-pip "
          />
          <span
            class="pb-pip "
          />
        </div>
      </button>
      <button
        class="pb-chapter "
      >
        <span
          class="pb-num"
        >
          02
        </span>
        <span
          class="pb-title"
        >
          Deep Dive
        </span>
      </button>
      <button
        class="pb-chapter "
      >
        <span
          class="pb-num"
        >
          03
        </span>
        <span
          class="pb-title"
        >
          Conclusion
        </span>
      </button>
    </div>
  </div>
</div>
`;
